# Connect4

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: implementationdoc.md  instructions.md  projectspecification.md  testingdocument.md
documentation/weekreports/: week1report.md  weekreport1.md  weekreport2.md  weekreport3.md  weekreport4.md  weekreport5.md  weekreport6.md
src/: index.py  minimax_performance.py
src/ai/: game_ai.py
src/services/: ai_service.py  game_service.py
src/tests/: console_gui_test.py
src/tests/ai/: game_ai_test.py
src/tests/integration/: game_ai_service_test.py  game_ui_service_integration_test.py
src/tests/services/: ai_service_test.py  game_service_test.py
src/tests/ui/: __init__.py  game_ui_test.py
src/ui/: game_ui.py
